--- a/estilo.css
+++ b/estilo.css
@@ -715,6 +715,8 @@
             #portfolio .fila .proyecto {
                 margin: 10px auto;
             }
+                
+        
 
                 /* seccion PORTFOLIO 2*/
             #portfolio2 {
@@ -741,3 +743,8 @@
                 margin-bottom: 15px;
             }
         }
+
+@media (max-width: 768px) {
+    /* Estilos para pantallas más pequeñas (como teléfonos) */
+    /* Aquí puedes ajustar el diseño según tus necesidades */
+}
